--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
+    "postmark": "^4.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
